--- a/app/package.json
+++ b/app/package.json
@@ -127,7 +127,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "./",
+  "homepage": "./omen-idea",
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
