--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@realitio/realitio-lib": "^2.0.1",
     "@reduxjs/toolkit": "^1.2.3",
     "@types/big.js": "^4.0.5",
+    "@types/classnames": "^2.2.11",
     "@types/common-tags": "^1.8.0",
     "@types/contract-proxy-kit": "^1.0.1",
     "@types/jest": "24.0.18",
@@ -33,6 +34,7 @@
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-share": "^3.0.3",
+    "@types/react-tabs": "^2.3.2",
     "@types/react-tooltip": "^3.9.3",
     "@types/recharts": "^1.8.10",
     "@types/styled-components": "^4.1.18",
@@ -53,6 +55,7 @@
     "babel-plugin-named-asset-import": "^0.3.6",
     "big.js": "^6.0.3",
     "circular-dependency-plugin": "^5.2.0",
+    "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
     "contract-proxy-kit": "2.2.0-alpha.3",
     "disqus-react": "^1.0.8",
@@ -81,7 +84,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.0-next.98",
     "react-share": "3.0.1",
+    "react-tabs": "^3.2.1",
     "react-tooltip": "^3.11.1",
+    "reactstrap": "^8.9.0",
     "recharts": "^1.8.5",
     "sanitize.css": "^11.0.0",
     "styled-components": "^4.3.2",
@@ -149,5 +154,5 @@
   },
   "resolutions": {
     "pull-ws": "3.3.2"
-  }  
+  }
 }
